--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 <body>
     <div id="main">
+        <!-- <p>As this website is in more of page format , I have classified each contents into pages</p> -->
+        <!-- page 1 -->
         <div id="page1"> 
             <div id="header1">
-                <div id="logo"><img src="download-removebg-preview (1).png" class="teslaLogo"></div>
+                <div id="logo"><img src="download__2_-removebg-preview.png" class="teslaLogo"></div>
                 <div id="Vehicles" class="text"><p>Vehicles</p></div>
                 <div class="text"><p>Energy</p></div>
                 <div class="text"><p>Charging</p></div>
@@ -39,6 +41,9 @@
                 </div>
             </div>
         </div>
+        <!-- end of pg 1 -->
+
+        <!-- pg 2 -->
         <div id="page2">
              <div id="content2">
                 <img src="https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-Model-Y-Desktop-US-v2.png" alt="">
@@ -53,6 +58,10 @@
                 </div>
              </div>   
         </div>  
+
+        <!-- end of pg 2 -->
+
+        <!-- pg 3 -->
         <div id="page3">
                 <div id="content3">
                     <img src="https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-Model-X-Desktop-US.png" alt="">
@@ -67,6 +76,10 @@
                     </div>
                 </div>
         </div>
+
+        <!-- end of pg 3 -->
+
+        <!-- pg 4 -->
         <div id="page4">
             <div id="content4">
                 <img src="https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-Model-S-Desktop-US.png" alt="">
@@ -81,6 +94,9 @@
                 </div>
             </div>
         </div>
+        <!-- end of pg 4 -->
+
+        <!-- pg 5 -->
         <div id="page5">
             <div id="content5">
                 <img src="https://digitalassets.tesla.com/discovery-tesla-com/image/upload/f_auto,q_auto/Homepage-Cybertruck-Desktop.jpg" alt="">
@@ -91,6 +107,9 @@
             </div>
             <div class="logoclass"><img src="1200px-Cybertrucklogo.svg.png" alt=""></div>
         </div>
+        <!-- end of pg 5 -->
+
+        <!-- pg 6 -->
         <div id="page6">
             <div id="content6">
                 <img src="https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-SolarPanels-01-Desktop" alt="">
@@ -104,6 +123,10 @@
                 </div>
             </div>
         </div>
+
+        <!-- end of page 6 -->
+
+        <!-- pg 7 -->
         <div id="page7">
             <div id="content7">
                 <img src=https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-SolarRoof-Desktop-US.png alt="">
@@ -117,6 +140,10 @@
                 </div>
             </div>
         </div>
+
+        <!-- end of pg 7 -->
+
+        <!-- pg 8 -->
         <div id="page8">
             <div id="content8">
                 <img src=https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-Powerwall-Desktop-US.png alt="">
@@ -129,6 +156,10 @@
                 </div>
             </div>
         </div>
+
+        <!-- end of pg 8 -->
+
+        <!-- pg 9 -->
         <div id="page9">
             <div id="content9">
                 <img src=https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto/Homepage-Accessories-Desktop-US.png alt="">
@@ -140,6 +171,10 @@
                 </div>
             </div> 
         </div>
+
+        <!-- end of pg 9 -->
+
+        <!-- pg 10 -->
         <div id="page10">
             <div id="content10"> 
                 <p>1 Price before estimated savings is $44,130, including Destination and Order Fees, but excluding taxes and <br> other fees. Subject to change. Vehicle shown has upgrades that will increase the price. Estimated savings <br> includes $5,000 in <a class="linkwords" href="https://www.tesla.com/model3/design?financeModalTab=gas_savings#overview">gas savings</a>  estimated over five years, the $7,500 Federal Tax Credit and state <br> incentives, available to eligible buyers and subject to MSRP caps. Model 3 Rear-Wheel Drive and leases not <br> eligible for the Federal Tax Credit. <a class="linkwords" href="https://www.tesla.com/support/incentives">Terms apply</a></p>
@@ -159,8 +194,9 @@
                     <div id="tab5" >Get Updates</div>
                     <div id="tab6" >Locations</div>
                 </div>
+            </div>     
         </div>
-</div>
-    
+     <!-- end of pg 10    -->
+</div>  
 </body>
 </html>
